microservices-on-openshift/twistlock/twistlock_console.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: console
  name: twistlock-console
  namespace: twistlock
spec:
  ports:
  - name: communication-port
    port: 8084
  - name: management-port-https
    port: 8083
  - name: mgmt-http
    port: 8081
  selector:
    name: twistlock-console
  type: ClusterIP

---
 apiVersion: v1
 kind: SecurityContextConstraints
 metadata:
   name: twistlock-console
 users:
 - system:serviceaccount:twistlock:twistlock-console
 allowHostDirVolumePlugin: true
 allowHostIPC: false
 allowHostNetwork: false
 allowHostPID: false
 allowHostPorts: false
 defaultAddCapabilities: null
 requiredDropCapabilities: null
 allowedCapabilities: null
 allowPrivilegedContainer: false
 fsGroup: # Volumes which support ownership management are modified to be owned and writable by the GID specified in fsGroup
   type: RunAsAny
 priority: null
 readOnlyRootFilesystem: true
 requiredDropCapabilities: null
 runAsUser:
   type: RunAsAny
 seLinuxContext:
   type: RunAsAny
 supplementalGroups: # Supplemental groups are regular Linux groups. When a process runs in Linux, it has a UID, a GID, and one or more supplemental groups.
   type: RunAsAny
 volumes:
 - '*' # Types of volumes the pod can mount. * is wildcard. https://docs.openshift.org/latest/architecture/additional_concepts/authorization.html#authorization-controlling-volumes
