microservices-on-openshift/twistlock/twistlock_external_route.yaml
apiVersion: v1
kind: Route
metadata:
  namespace: twistlock
  labels:
    name: console
  name: twistlock-console
spec:
  host: console-twistlock.apps.ocp.datr.eu
  port:
    targetPort: mgmt-http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: twistlock-console
    weight: 100
  wildcardPolicy: None
